# example-flawless-web-crawler

./: .lldbinit  Cargo.toml  Readme.md  build.rs
assets/: styles.css
src/: main.rs
templates/: base.html  index.html  list.html
workflows/crawler/: Cargo.toml
workflows/crawler/src/: lib.rs
