[package]
name = "crawler"
version = "0.1.2"
edition = "2021"

[dependencies]
log = "0.4"
select = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

flawless = { path = "../../../flawless-next/crates/flawless" }
flawless-http = { path = "../../../flawless-next/crates/flawless-http" }
